bring it back homie

--- a/index.html
+++ b/index.html
@@ -51,7 +51,12 @@
               <label class="people" for="people">Number of People</label>
               <div class="people__number">
                 <img src="/images/icon-person.svg" alt="" />
-                <input class="people-input" type="text" name="people" />
+                <input
+                  class="people-input"
+                  id="people"
+                  type="text"
+                  name="people"
+                />
               </div>
             </div>
           </div>
@@ -62,7 +67,7 @@
                 <h4>Tip Amount</h4>
                 <h5>/ person</h5>
               </div>
-              <div class="value tip-amount-value">$0.00</div>
+              <h1 class="value tip-amount-value">$0.00</h1>
             </div>
 
             <div class="amount__total">
@@ -70,7 +75,7 @@
                 <h4>Total Amount</h4>
                 <h5>/ person</h5>
               </div>
-              <div class="value total-value">$0.00</div>
+              <h1 class="value total-value">$0.00</h1>
             </div>
 
             <button class="reset">Reset</button>
@@ -85,5 +90,6 @@
         >Frontend Mentor</a
       >. Coded by <a href="#">Joe Balzac</a>.
     </div>
+    <script src="/app/js/script.js"></script>
   </body>
 </html>
